Minor updates to homepage text. Anchor tags now have permanent underline.

--- a/index.html
+++ b/index.html
@@ -11,22 +11,22 @@
 	<header id="masthead">
 		<a href="/">
 			<h1>John Berberich</h1>
-			<h2>Programming, gaming, running, and scuba diving are some of the things I do.</h2>
+			<h2>Programming, gaming, running, and scuba diving are some of the things I enjoy.</h2>
 		</a>
 	</header>
 	
 	<section class="content">
-		<p>Hello!  My name is John Berberich and I'm in the middle of designing my website,
-		and, in the interest of publishing a home page quickly, I'm keeping my introduction short
-		<em>for now</em>.</p>
+		<p>Hello! My name is John Berberich and you've caught me in the middle of designing my
+		website. In the interest of time and to get this project rolling, I quickly published this
+		pared-down home page and kept my introduction short, but please check back soon for my
+		foray into the blogosphere, a better design, and some projects.</p>
+		<p>In the meantime, you can learn a bit about my professional background on
+		<a href="http://careers.stackoverflow.com/johnberberich">Stack Overflow Careers</a> and
+		connect with me on <a href="http://www.linkedin.com/in/johnberberich">LinkedIn</a> (I keep
+		both profiles up to date).</p>
 		<p>If you want to talk, feel free to email me at
-		<a href="mailto:jberberich@gmail.com">jberberich@gmail.com</a>, or I'm
-		<a href="https://twitter.com/johnberberich">@johnberberich</a> on Twitter
-		if you prefer that.</p>
-		<p>My professional information lives on both
-		<a href="http://careers.stackoverflow.com/johnberberich">Stack Overflow Careers</a>
-		and
-		<a href="http://www.linkedin.com/in/johnberberich">LinkedIn</a>.</p>
+		<a href="mailto:jberberich@gmail.com">jberberich@gmail.com</a>; or, if Twitter is more your
+		thing, I'm <a href="https://twitter.com/johnberberich">@johnberberich</a>.</p>
 	</section><!-- .content -->
 	
 	<footer>
