Added a link to my resume stored in Dropbox; minor textual edits.

--- a/index.html
+++ b/index.html
@@ -11,22 +11,23 @@
 	<header id="masthead">
 		<a href="/">
 			<h1>John Berberich</h1>
-			<h2>Programming, gaming, running, and scuba diving are some of the things I enjoy.</h2>
+			<h2>programmer, video gamer, runner, and scuba diver</h2>
 		</a>
 	</header>
 	
 	<section class="content">
-		<p>Hello! My name is John Berberich and you've caught me in the middle of designing my
-		website. In the interest of time and to get this project rolling, I quickly published this
-		pared-down home page and kept my introduction short, but please check back soon for my
-		foray into the blogosphere, a better design, and some projects.</p>
-		<p>In the meantime, you can learn a bit about my professional background on
-		<a href="http://careers.stackoverflow.com/johnberberich">Stack Overflow Careers</a> and
-		connect with me on <a href="http://www.linkedin.com/in/johnberberich">LinkedIn</a> (I keep
-		both profiles up to date).</p>
-		<p>If you want to talk, feel free to email me at
-		<a href="mailto:jberberich@gmail.com">jberberich@gmail.com</a>; or, if Twitter is more your
-		thing, I'm <a href="https://twitter.com/johnberberich">@johnberberich</a>.</p>
+		<p>Hello! I'm John Berberich, a 30-something programmer in Cincinnati who enjoys
+		technology, video games, running, and scuba diving. I finally decided to carve out
+		this little place of my own on the Internet, and though it is currently a work in
+		progress (my website, that is), it will eventually host a blog, projects, and a
+		better design.</p>
+		<p>While I work on this in fits and starts, you can grab a copy of my
+		<a href="https://dl.dropbox.com/u/4841094/John%20Berberich%20-%20Software%20Engineer.pdf">
+		resume</a> or connect with me on
+		<a href="https://www.linkedin.com/in/johnberberich">LinkedIn</a>. If you want to
+		chat, feel free to send an email to <a href="mailto:jberberich@gmail.com">
+		jberberich@gmail.com</a> or a DM to <a href="https://twitter.com/johnberberich">
+		@johnberberich</a>.</p>
 	</section><!-- .content -->
 	
 	<footer>
@@ -34,4 +35,4 @@
 	</footer>
 </div><!-- #container -->
 
-</body>	
+</body>
