--- a/index.html
+++ b/index.html
@@ -3,24 +3,21 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<title>John Berberich</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 	<link rel="stylesheet" type="text/css" href="css/reset.css"></link>
-	<link rel="stylesheet" type="text/css" href="css/style.css"></link>
+	<link rel="stylesheet" type="text/css" media="screen" href="css/style.css"></link>
 	<script type="text/javascript">
-
 		var _gaq = _gaq || [];
 		_gaq.push(['_setAccount', 'UA-35929716-1']);
 		_gaq.push(['_trackPageview']);
-		
 		(function() {
 			var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
 			ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
 			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
 		})();
-
 	</script>
 </head>
 <body>
-<div id="page">
 	<header id="masthead">
 		<h1><a href="/">John Berberich</a></h1>
 	</header>
@@ -49,5 +46,4 @@
 	<footer>
 		<p class="copyright">Copyright © 2012 John Berberich</p>
 	</footer>
-</div><!-- #page -->
 </body>
