Creating projects index page. Started porting some style-related HTML over to project pages.

--- a/projects/conway.html
+++ b/projects/conway.html
@@ -40,7 +40,7 @@ var misc = [[0, 0, 0, 0, 0, 0, 0, 0],
 			[0, 0, 0, 0, 0, 0, 0, 0]];
 
 var gameInit = function() {
-	grid = blinker;
+	grid = beacon;
 	width = grid.length - 2;
 	height = grid[0].length - 2;
 
