--- a/projects/grid.html
+++ b/projects/grid.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>Grid - Projects - John Berberich</title>
+	<meta charset="UTF-8" />
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
+	<title>Grid Fun - Projects - John Berberich</title>
+	<link rel="stylesheet" type="text/css" href="../css/reset.css"></link>
+	<link rel="stylesheet" type="text/css" href="../css/style.css"></link>
 	<style type="text/css">
 		canvas {
 			margin: 0;
