Conway's Game of Life now works on projects/grid.html.

--- a/index.html
+++ b/index.html
@@ -27,21 +27,15 @@
 			<p>Hi, I'm John, a programmer in Cincinnati, and this is my personal site.
 			I like programming, technology, video games, running, scuba, and travel and
 			will thus talk about them here.</p>
-			<p>While I work on this in fits and starts, grab a copy of my
+			<p>While I work on this in fits and starts, you can download a copy of my
 			<a href="https://dl.dropbox.com/u/4841094/John%20Berberich%20-%20Software%20Engineer.pdf">
-			resume</a> or connect with me on
-			<a href="https://www.linkedin.com/in/johnberberich">LinkedIn</a>.
-			<p>If you want to talk, feel free to shoot me an
-			<a href="mailto:jberberich@gmail.com">email</a> or a
-			<a href="https://twitter.com/johnberberich">DM</a>.</p>
-<!--
-<h2>And now for some <em>Lorem ipsum</em> text...</h2>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce vel leo enim. Phasellus elementum eleifend accumsan. Pellentesque nec tellus purus. Curabitur sit amet orci nibh. Nulla consectetur nulla eu urna pellentesque eget aliquam enim tristique. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Morbi tincidunt blandit pulvinar. Donec fermentum nisi dolor, ac facilisis risus. Nam non purus et metus volutpat imperdiet ut sed ipsum. Nam at bibendum quam. Nam luctus ultricies turpis nec convallis. Vestibulum libero ipsum, pellentesque eget ornare fringilla, aliquam quis tortor.</p>
-<p>Nam quis ipsum et ante tincidunt mollis. Vivamus id ante ante. Ut sodales massa et ante adipiscing sed mollis mi sagittis. Integer in nibh leo, eu ultrices risus. Nam dictum sagittis erat, et volutpat eros eleifend ac. In nec pellentesque enim. Aliquam erat volutpat. In hac habitasse platea dictumst. Aliquam sed orci velit, ut eleifend justo. Praesent id metus odio. Suspendisse tincidunt tempor porttitor. Duis viverra mollis turpis, eu consectetur dolor dignissim non. Sed sed metus ac est mollis pharetra id at neque. Nunc fermentum, quam quis hendrerit adipiscing, magna ante iaculis urna, quis lacinia nisi neque quis odio. Donec sit amet sem nec justo hendrerit varius vitae in nisi. Praesent faucibus ipsum eu erat sodales ut consequat massa dignissim.</p>
-<p>Integer est arcu, blandit nec iaculis et, vestibulum ac sapien. Duis vitae lacus quis eros sodales accumsan ut a dui. Quisque semper dictum libero et iaculis. Nullam porta ultricies ornare. Duis eu magna non ligula dapibus fringilla cursus imperdiet nunc. Quisque auctor ultrices mauris, a vehicula diam gravida ut. Vivamus placerat arcu at lectus faucibus sagittis. Phasellus egestas mattis lobortis. Integer leo urna, auctor id rutrum quis, accumsan at lacus. Maecenas lectus tortor, auctor ac fermentum a, egestas et velit. Nunc porttitor nisi nec lectus dignissim a cursus erat laoreet. Nullam porta enim ut quam pellentesque vitae tempus mauris sodales. Donec et libero non libero sodales lobortis rutrum et tellus. Mauris rutrum suscipit elit in egestas. Vestibulum posuere tempor purus ut eleifend.</p>
-<p>Pellentesque suscipit facilisis sapien, a molestie lectus volutpat et. Integer eu vestibulum nisl. Sed tincidunt, metus vel congue suscipit, nisi metus consequat sem, sed ultrices velit nisi ac neque. Donec quis nulla libero. Pellentesque sodales justo nec eros blandit semper. Fusce nisl mauris, rhoncus eu egestas sed, molestie non est. Aliquam erat volutpat. Donec ipsum purus, tincidunt quis eleifend semper, ullamcorper at erat. Nulla sagittis feugiat est, ac bibendum nulla suscipit sit amet. Cras cursus arcu vitae nisi imperdiet consequat.</p>
-<p>Curabitur in neque ut metus dictum suscipit eget a tellus. Vestibulum in mauris est, ac euismod libero. Donec quis leo metus. In vestibulum tincidunt tortor at interdum. Integer at enim tortor, vel pharetra sapien. Curabitur tempor faucibus enim, et commodo sem pellentesque vitae. Nunc non semper nisl. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Integer tincidunt sagittis tempus. Etiam tincidunt tincidunt velit, eget vestibulum metus consequat sed.</p>
--->
+			resume</a>, connect with me on
+			<a href="https://www.linkedin.com/in/johnberberich">LinkedIn</a>, and check
+			out some of the <a href="projects/index.html">projects</a> I've been working
+			on (just one right now).
+			<p>If you want to talk, feel free to contact me via
+			<a href="mailto:jberberich@gmail.com">email</a> or
+			<a href="https://twitter.com/johnberberich">Twitter</a>.</p>
 		<article><!-- /end .entry -->
 	</section><!-- /end .content -->
 	<footer>
