--- a/projects/index.html
+++ b/projects/index.html
@@ -6,13 +6,29 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
 	<title>Projects - John Berberich</title>
 	<link rel="stylesheet" type="text/css" href="../css/reset.css"></link>
-	<link rel="stylesheet" type="text/css" href="../css/style.css"></link>
+	<link rel="stylesheet" type="text/css" media="screen" href="../css/style.css"></link>
+	<script type="text/javascript">
+		var _gaq = _gaq || [];
+		_gaq.push(['_setAccount', 'UA-35929716-1']);
+		_gaq.push(['_trackPageview']);
+		(function() {
+			var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+			ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+		})();
+	</script>
 </head>
 <body>
-	<h1>Projects</h1>
-	<ul>
-		<li><a href="conway.html">Conway's Game of Life</a></li>
-		<li><a href="grid.html">Grid fun</a></li>
-	</ul>
+	<header id="masthead">
+		<h1><a href="/">John Berberich</a></h1>
+	</header>
+	<section class="content">
+		<h1>Projects</h1>
+		<ul>
+			<li><a href="grid.html">Conway's Game of Life and more grid fun</a></li>
+		</ul>
+	</section><!-- /end .content -->
+	<footer>
+		<p class="copyright">Copyright © 2012 John Berberich</p>
+	</footer>
 </body>
-</html>
