--- a/projects/grid.html
+++ b/projects/grid.html
@@ -7,63 +7,54 @@
 	<title>Grid Fun - Projects - John Berberich</title>
 	<link rel="stylesheet" type="text/css" href="../css/reset.css"></link>
 	<link rel="stylesheet" type="text/css" href="../css/style.css"></link>
-	<style type="text/css">
-		canvas {
-			margin: 0;
-			padding: 0;
-		}
-		#gameboard {
-			float: left;
-		}
-		#controls {
-			float: right;
-		}
-		#controls button {
-			display: block;
-			width: 100%;
-		}
-</style>
+	<script type="text/javascript">
+		var _gaq = _gaq || [];
+		_gaq.push(['_setAccount', 'UA-35929716-1']);
+		_gaq.push(['_trackPageview']);
+		(function() {
+			var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+			ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+		})();
+	</script>
 </head>
 <body>
-	<div id="controls">
-		<button type="button" onclick="clearDemo();">Clear</button>
-		<button type="button" onclick="randomizeDemo();">Randomize</button>
-		<button type="button" onclick="log('Count');">Count</button>
-		<button type="button" onclick="log('Simulate');">Simulate</button>
-	</div>
-	<div id="gameboard">
-		<canvas id="canvas" width="300" height="300">
-			Your browser doesn't support the <code>&lt;canvas&gt;</code> element.
-		</canvas>
-	</div>
+	<header id="masthead">
+		<h1><a href="/">John Berberich</a></h1>
+	</header>
+	<section class="content">
+		<div id="gameboard">
+			<canvas id="canvas" width="300" height="300">
+				Your browser doesn't support the <code>&lt;canvas&gt;</code> element.
+			</canvas>
+		</div>
+		<div id="controls">
+			<button type="button" onclick="clearDemo();">Clear</button>
+			<button type="button" onclick="randomizeDemo();">Randomize</button>
+			<button type="button" onclick="simulate();">Conway</button>
+			<button type="button" onclick="countShapes();">Count</button>
+		</div>
+	</section><!-- /end .content -->
+	<footer>
+		<p class="copyright">Copyright © 2012 John Berberich</p>
+	</footer>
+	
+	<script src="../js/grid.js" type="text/javascript"></script>
 	<script type="text/javascript">
-		var log = function(msg) {
-			console.log(msg);
-		}
-		var autorun = function() {
-			var canvas = document.getElementById('canvas');
-			initialize(5, 5, canvas);
-		}
-		
 		var _canvas;
+		var _grid;
 		var _context;
-		var _gridWidth;
-		var _gridHeight;
 		var _pixelWidth;
 		var _pixelHeight;
+
+		var autorun = function() {
+			_canvas = document.getElementById('canvas');
+			_grid = new BerbSoft.Grid(5, 5);
+			init();
+			render();
+		}
 		
-		/**************************/
-		/***** DEMO FUNCTIONS *****/
-		/**************************/
-		var initialize = function(width, height, canvas) {
-			_gridWidth = width;  //TODO: check bounds
-			_gridHeight = height;  //TODO: check bounds
-			_canvas = canvas;
-			_pixelWidth = canvas.width / _gridWidth;
-			_pixelHeight = canvas.height / _gridHeight;
-			log("pixel width = " + _pixelWidth);
-			log("pixel height = " + _pixelHeight);
-			
+		var init = function() {
 			if(!_canvas) {
 				alert('Error: no canvas!!!');
 				return;
@@ -72,15 +63,14 @@
 				alert('Error: no canvas.getContext!!!');
 				return;
 			}
-			
 			_context = _canvas.getContext('2d');
 			if(!_context) {
 				alert('Error: failed to canvas.getContext!!!');
 				return;
 			}
-			
-			log("Context created (canvas=" + _canvas.width + "x" + _canvas.height + ",grid=" + width + "x" + height + ")!");
-			initGrid();
+			_pixelWidth = _canvas.width / _grid.width;
+			_pixelHeight = _canvas.height / _grid.height;
+			console.log("Context created (canvas=" + _canvas.width + "x" + _canvas.height + ", grid=" + _grid.width + "x" + _grid.height + ")!");
 
 			// Attach event listeners to canvas.
 			_canvas.addEventListener('click', onCanvasClicked, false);
@@ -89,15 +79,30 @@
 			_context.fillStyle = "#0a0";
 			_context.strokeStyle= "#000";
 			_context.lineWidth = 1;
-			
+		}
+
+		var clearDemo = function() {
+			_grid.clear();
 			render();
+		}
+
+		var randomizeDemo = function() {
+			_grid.randomize(0, 1);
+			render();
+		}
+
+		var simulate = function() {
+			_grid.conway();
+			render();
+		}
+		
+		var countShapes = function() {
+			alert("Not implemented yet.");
 		}
 		
 		var onCanvasClicked = function(e) {
 			var canvasXY = _canvas.relativeMouseCoordinates(e);
-			var gridXY = getGridCoordsFromElementCoords(canvasXY.x, canvasXY.y); 
-			
-			log("Clicked on canvas(" + canvasXY.x + "," + canvasXY.y + ")/grid(" + gridXY.x + "," + gridXY.y + ").");
+			var gridXY = getGridCoordsFromCanvasCoords(canvasXY.x, canvasXY.y); 
 			toggleCell(gridXY.x, gridXY.y);
 			render();
 		}
@@ -122,29 +127,24 @@
 		}
 		HTMLCanvasElement.prototype.relativeMouseCoordinates = relativeMouseCoordinates;
 		
-		var getGridCoordsFromElementCoords = function(x, y) {
+		var getGridCoordsFromCanvasCoords = function(x, y) {
 			var x = Math.floor(x / _pixelWidth);
 			var y = Math.floor(y / _pixelHeight);
 			return {x:x, y:y};
 		}
 			
-		
 		var toggleCell = function(x, y) {
-			var val = getPos(x, y);
-			if(val > 0)
-				setPos(x, y, 0);
-			else
-				setPos(x, y, 1);
+			var val = _grid.getValue(x, y);
+			val = val > 0 ? 0 : 1;  // toggle
+			_grid.setValue(x, y, val);
 		}
 		
-		
 		var render = function() {
-			for(gy = 0; gy < _gridHeight; gy++) {
-				for(gx = 0; gx < _gridWidth; gx++) {
+			for(var gy = 0; gy < _grid.width; gy++) {
+				for(var gx = 0; gx < _grid.height; gx++) {
 					var px = gx * _pixelWidth;
 					var py = gy * _pixelHeight;
-					var val = getPos(gx, gy);
-					
+					var val = _grid.getValue(gx, gy);
 					//TODO: If the state of the pixel hasn't changed, don't redraw it.
 					_context.strokeRect(px, py, _pixelWidth, _pixelHeight);
 					if(val > 0)  {
@@ -156,50 +156,9 @@
 			}
 		}
 		
-		
-		var clearDemo = function() {
-			resetGrid();
-			render();
-		}
-		
 		var randomBetween = function(from, to) {
 			return Math.floor(Math.random() * (to - from + 1) + from);
 		}
-		
-		var randomizeDemo = function() {
-			for(gy = 0; gy < _gridHeight; gy++) {
-				for(gx = 0; gx < _gridWidth; gx++) {
-					setPos(gx, gy, randomBetween(0, 1));
-				}
-			}
-			render();
-		}
-
-		
-		// The grid is a simple representation of a 2-D array.
-		//TODO:  Turn into class.
-		var _grid;
-		var initGrid = function() {
-			_grid = new Array(_gridWidth * _gridHeight);
-			resetGrid();
-		}
-		var resetGrid = function() {
-			for(i = 0; i < _grid.length; i++) {
-				_grid[i] = 0;
-			}
-		}
-		var resetPos = function(x, y) {
-			setPosValue(0, x, y);
-		}
-		var getPos = function(x, y) {
-			var i = x + _gridHeight * y;
-			return _grid[i];
-		}
-		var setPos = function(x, y, value) {
-			var i = x + _gridHeight * y;
-			_grid[i] = value;
-		}
-		
 		
 		/*************************/
 		/***** EVENT HOOKUPS *****/
