--- a/projects/index.html
+++ b/projects/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8" />
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
+	<meta name="description" content="My projects.">
 	<title>Projects - John Berberich</title>
 	<link rel="stylesheet" type="text/css" href="../css/reset.css"></link>
 	<link rel="stylesheet" type="text/css" media="screen" href="../css/style.css"></link>
