Starting to add menus. Moving towards mobile-first design with HTML mobile boilerplate v4.1.0.

--- a/about.html
+++ b/about.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<title>About me | John Berberich</title>
-	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+	<meta charset="UTF-8" />
+	<title>About | John Berberich</title>
+	<link href="css/reset.css" rel="stylesheet" type="text/css"></link>
 	<link href="css/style.css" rel="stylesheet" type="text/css"></link>
 </head>
 <body>
 	<div id="container">
 		<header id="masthead">
-			<h1>John Berberich</h1>
+			<h2>John Berberich</h2>
 		</header>
+		<article>
+			<header>
+				<h1>About</h1>
+			</header>
+		</article>
+		<footer>
+		</footer>
 	</div>
 </body>
 </html>
