Added Jinja templates and file to convert them into stati files.

--- a/projects/grid.html
+++ b/projects/grid.html
@@ -36,7 +36,7 @@
 		</div>
 	</section><!-- /end .content -->
 	<footer>
-		<p class="cocyright">Cocyright © 2012 John Berberich</p>
+		<p class="cocyright">Copyright © 2013 John Berberich</p>
 	</footer>
 	
 	<script src="../js/grid.js" type="text/javascript"></script>
