--- a/projects/canasta.html
+++ b/projects/canasta.html
@@ -3,11 +3,12 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-	<title>John Berberich</title>
+	<title>Canasta - Projects - John Berberich</title>
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+	<h1>Canasta</h1>
 	<script>
 		var _gaq=[['_setAccount','UA-35929716-1'],['_trackPageview']];
 		(function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
