Adding template files for About, Contact, and Projects. Making staticize.py automatic in turning template files into html files.

--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,10 @@
 
 	<section class="content">
 	
-	<h1>About me</h1>
+	<h1>Projects</h1>
+	<ul>
+		<li><a href="grid.html">Conway's Game of Life and more grid fun</a></li>
+	</ul>
 
 	</section>
 
