Styling main nav and splitting out Google Analytics into separate include file.

--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Home -John Berberich</title>
+	<title>Contact - John Berberich</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 	<meta name="description" content="">
 	<link rel="stylesheet" href="css/normalize.css" type="text/css">
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<header id="masthead">
-		<h1><a href="/">John Berberich</a></h1>
+		<h1><a href="index.html">John Berberich</a></h1>
 		<nav id="main-nav">
 			<ul>
 				<li><a href="about.html">About</a></li>
@@ -20,9 +20,9 @@
 		</nav>
 	</header>
 
-	<section class="content">
+	<section id="content">
 	
-	<h1>Contact me</h1>
+	<h2>Contact me</h2>
 
 	</section>
 
@@ -31,10 +31,10 @@
 	</footer>
 
 	<script type="text/javascript">
-		var _gaq=[['_setAccount','UA-35929716-1'],['_trackPageview']];
-		(function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-		g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
-		s.parentNode.insertBefore(g,s)}(document,'script'));
-	</script>
+	var _gaq=[['_setAccount','UA-35929716-1'],['_trackPageview']];
+	(function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
+	g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
+	s.parentNode.insertBefore(g,s)}(document,'script'));
+</script>
 </body>
 </html>
