Added /games dir and started working on Pong. Currently two Pong players can move their paddles independently with a/z and k/m keys.

--- a/about.html
+++ b/about.html
@@ -14,21 +14,23 @@
 		<nav id="main-nav">
 			<ul>
 				<li><a href="about.html">About</a></li>
-				<li><a href="projects.html">Projects</a></li>
+				<li><a href="games.html">Games</a></li>
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</nav>
 	</header>
-
+	<div style="width:280px; margin:auto;">
 	<section id="content">
 	
 	<h2>About me</h2>
 
 	</section>
-
+	
 	<footer>
 		<p id="copyright">Copyright &copy; 2013 John Berberich</p>
 	</footer>
+
+	</div>
 
 	<script type="text/javascript">
 	var _gaq=[['_setAccount','UA-35929716-1'],['_trackPageview']];
