--- a/games.html
+++ b/games.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Contact - John Berberich</title>
+	<title>Games - John Berberich</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 	<meta name="description" content="">
 	<link rel="stylesheet" href="css/normalize.css" type="text/css">
@@ -22,7 +22,11 @@
 	<div style="width:280px; margin:auto;">
 	<section id="content">
 	
-	<h2>Contact me</h2>
+	<h2>Games</h2>
+	<ul>
+		<li><a href="games/pong.html">Pong</a></li>
+		<!--<li><a href="games/canasta.html">Canasta</a></li>-->
+	</ul>
 
 	</section>
 	
