--- a/games/canasta.html
+++ b/games/canasta.html
@@ -3,12 +3,20 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
-	<title>Canasta - Projects - John Berberich</title>
-	<link rel="stylesheet" href="css/normalize.css">
-	<link rel="stylesheet" href="css/main.css">
+	<title>Canasta - Games - John Berberich</title>
+	<link rel="stylesheet" href="../css/normalize.css">
+	<link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
-	<h1>Canasta</h1>
+	<header>
+		<h1>Canasta</h1>
+	</header>
+
+	<canvas id="canvas" width="240" height="300">
+		Your browser doesn't support the <code>&lt;canvas&gt;</code> element or you have Javascript disabled.
+	</canvas>
+	
+	<script src="../js/canasta.js"></script>
 	<script>
 		var _gaq=[['_setAccount','UA-35929716-1'],['_trackPageview']];
 		(function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
