--- a/projects/grid.html
+++ b/projects/grid.html
@@ -1,27 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8" />
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
+	<meta charset="utf-8">
 	<title>Grid Fun - Projects - John Berberich</title>
-	<link rel="stylesheet" type="text/css" href="../css/reset.css"></link>
-	<link rel="stylesheet" type="text/css" href="../css/style.css"></link>
-	<script type="text/javascript"> <!-- Google Analytics -->
-		var _gaq = _gaq || [];
-		_gaq.push(['_setAccount', 'UA-35929716-1']);
-		_gaq.push(['_trackPageview']);
-		(function() {
-			var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-			ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-		})();
-	</script>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+	<meta name="description" content="">
+	<link rel="stylesheet" href="../css/normalize.css" type="text/css">
+	<link rel="stylesheet" href="../css/style.css" type="text/css" media="screen">
 </head>
 <body>
 	<header id="masthead">
 		<h1><a href="/">John Berberich</a></h1>
 	</header>
+
 	<section class="content">
 		<div id="gameboard">
 			<canvas id="canvas" width="240" height="300">
@@ -35,8 +26,9 @@
 			<!--button type="button" onclick="countShapes();">Count</button-->
 		</div>
 	</section><!-- /end .content -->
+
 	<footer>
-		<p class="cocyright">Copyright © 2013 John Berberich</p>
+		<p class="copyright">Copyright &copy; 2013 John Berberich</p>
 	</footer>
 	
 	<script src="../js/grid.js" type="text/javascript"></script>
@@ -167,6 +159,13 @@
 		if (document.addEventListener) document.addEventListener("DOMContentLoaded", autorun, false);
 		else if (document.attachEvent) document.attachEvent("onreadystatechange", autorun);
 		else window.onload = autorun;
+	</script>
+
+	<script type="text/javascript">
+		var _gaq=[['_setAccount','UA-35929716-1'],['_trackPageview']];
+		(function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
+		g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
+		s.parentNode.insertBefore(g,s)}(document,'script'));
 	</script>
 </body>
 </html>
